[gd_scene load_steps=10 format=3 uid="uid://dfhs48umcfx41"]

[ext_resource type="Script" uid="uid://bus46kgag16sl" path="res://Scripts/Controllers/GameOverController.gd" id="1_yxx3c"]
[ext_resource type="Texture2D" uid="uid://dgkrojwqs5egn" path="res://Assets/Sprites/Buildings/Map_Jour.png" id="2_bnh5c"]
[ext_resource type="Shader" uid="uid://birixytw2cib0" path="res://Assets/Shaders/GameWin.gdshader" id="3_bnh5c"]
[ext_resource type="Texture2D" uid="uid://ckgiiopsxb3l7" path="res://Assets/Sprites/UI/fond_texte_blanc.png" id="3_ielvo"]
[ext_resource type="Texture2D" uid="uid://5g3gslitkgb2" path="res://Assets/Sprites/UI/Restart.png" id="5_cf87c"]
[ext_resource type="Texture2D" uid="uid://vgebmsy4xhbh" path="res://Assets/Sprites/UI/quit_fins.png" id="6_7n8ck"]
[ext_resource type="Texture2D" uid="uid://7y4fca5ggr0j" path="res://Assets/Sprites/UI/GameOver.png" id="7_3gbkx"]
[ext_resource type="AudioStream" uid="uid://c5qpfeeu7f4ni" path="res://Assets/Audio/Lose.mp3" id="8_7n8ck"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cf87c"]
shader = ExtResource("3_bnh5c")
shader_parameter/force_du_flou = 2.5

[node name="GameOver" type="Node2D"]
script = ExtResource("1_yxx3c")

[node name="MapJour" type="Sprite2D" parent="."]
position = Vector2(576, 325)
scale = Vector2(0.4186047, 0.42187503)
texture = ExtResource("2_bnh5c")

[node name="FondFlou" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_cf87c")
offset_right = 1151.0
offset_bottom = 650.0

[node name="FondTexteBlanc" type="Sprite2D" parent="."]
position = Vector2(218, 335.00003)
scale = Vector2(0.6146723, 0.5290507)
texture = ExtResource("3_ielvo")

[node name="Restart" type="Button" parent="."]
offset_left = 590.0
offset_top = 202.0
offset_right = 985.0
offset_bottom = 445.0
theme_override_font_sizes/font_size = 80
icon = ExtResource("5_cf87c")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Quit" type="Button" parent="."]
offset_left = 594.0
offset_top = 425.0
offset_right = 970.0
offset_bottom = 621.0
theme_override_font_sizes/font_size = 80
icon = ExtResource("6_7n8ck")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 62.0
offset_top = 77.0
offset_right = 386.0
offset_bottom = 621.0

[node name="GameOver" type="Sprite2D" parent="."]
position = Vector2(791, 128)
scale = Vector2(0.31143466, 0.2389323)
texture = ExtResource("7_3gbkx")

[node name="LoserAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_7n8ck")
autoplay = true

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
